Multiple sessions per user (#19)
* feat: multiple sessions on same user [bck]

* feat: multiple sessions on same user [front]

* fix: cleanup issue

* refactor: some security concerns

* refactor: frontend code smells

* fix: imports

* fix: bar on firefox taskbartabs
